--- a/frontend/src/shared/components/UIElements/Modal.css
+++ b/frontend/src/shared/components/UIElements/Modal.css
@@ -36,7 +36,7 @@
 }
 
 .modal-enter {
-  transform: translateY(-10rem);
+  transform: translateY(100px);
   opacity: 0;
 }
 
@@ -52,7 +52,7 @@
 }
 
 .modal-exit-active {
-  transform: translateY(-10rem);
+  transform: translateY(100px);
   opacity: 0;
   transition: all 200ms;
 }
